hover fixed, white space was the culprit

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ table {
   background-color: #ffffff;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
-@media (max-width: 800px) {
+@media (max-width: 500px) {
   .top_bar {
     padding-left: 25px;
     padding-right: 30px;
@@ -163,7 +163,7 @@ table {
   justify-content: space-between;
   align-items: center;
 }
-@media (max-width: 800px) {
+@media (max-width: 500px) {
   .top_menu {
     display: none;
   }
@@ -175,6 +175,7 @@ table {
   color: #a5a5a5;
   text-decoration: none;
   text-transform: uppercase;
+  white-space: nowrap;
   padding: 25px 25px;
   border-bottom: 4px solid transparent;
 }
