--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -37,6 +37,7 @@
     color: $color-grey;
     text-decoration: none;
     text-transform: uppercase;
+    white-space: nowrap;
     padding: 25px 25px;
     border-bottom: 4px solid transparent;
 
